Estructura del Proyecto

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "WebEducacionIT": "Server=DESKTOP-E75BE45\\SQLEXPRESS;Database=WebEducacionIT;User Id=DESKTOP-E75BE45\feder"
+    //Server=myServerAddress;Database=myDataBase;Trusted_Connection=True;
+
+  }
 }
