--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -8,8 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "WebEducacionIT": "Server=DESKTOP-E75BE45\\SQLEXPRESS;Database=WebEducacionIT;User Id=DESKTOP-E75BE45\feder"
-    //Server=myServerAddress;Database=myDataBase;Trusted_Connection=True;
+    :  "Server=DESKTOP-E75BE45\\SQLEXPRESS;Database=WebEducacionIT;Trusted_Connection=True; "
 
   }
 }
