--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Dtos\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj" />
+  </ItemGroup>
+
 </Project>
